; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_devres.c_devm_regulator_destroy_notifier.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_devres.c_devm_regulator_destroy_notifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.regulator_notifier_match = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*, i8*)* @devm_regulator_destroy_notifier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @devm_regulator_destroy_notifier(%struct.device* %0, i8* %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.regulator_notifier_match*, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.regulator_notifier_match*
  store %struct.regulator_notifier_match* %7, %struct.regulator_notifier_match** %5, align 8
  %8 = load %struct.regulator_notifier_match*, %struct.regulator_notifier_match** %5, align 8
  %9 = getelementptr inbounds %struct.regulator_notifier_match, %struct.regulator_notifier_match* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.regulator_notifier_match*, %struct.regulator_notifier_match** %5, align 8
  %12 = getelementptr inbounds %struct.regulator_notifier_match, %struct.regulator_notifier_match* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @regulator_unregister_notifier(i32 %10, i32 %13)
  ret void
}

declare dso_local i32 @regulator_unregister_notifier(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
